--- a/src/styles.css
+++ b/src/styles.css
@@ -109,7 +109,7 @@ nav {
   cursor: pointer;
 }
 
-.card .likes {
+.card .like-container {
   width: auto;
   align-self: flex-end;
   font-size: 0.7rem;
