add styles when like btn is pressed

--- a/src/styles.css
+++ b/src/styles.css
@@ -107,6 +107,11 @@ nav {
 
 .card .like-btn {
   cursor: pointer;
+  color: #000;
+}
+
+.card .pressed {
+  color: #f00;
 }
 
 .card .like-container {
